<resources>
    <string name="app_name">Safer</string>
    <string name="setup">Setup</string>
    <string name="start_setup">Start setup</string>
    <string name="accounts_users">Remove accounts</string>
    <string name="accounts_desc">To continue to setup Safer, you will need to remove all accounts from your device. This will NOT permanently delete them, and you will be able to re-add them after.</string>
    <string name="acc_settings">Account settings</string>
    <string name="need_a_pc">After removing the accounts, you will need access to a computer with an Internet browser to continue the setup.</string>
    <string name="have_access_to_pc">I have access to a computer</string>
    <string name="continue_">Continue</string>
    <string name="dev_options">Enable developer options</string>
    <string name="dev_desc">To allow the phone to connect to the computer, you will need to enable your device\'s Developer options. Don\'t worry; this won\'t break your device, be hard to do or void your warranty. You will even be able to disable them after the setup.\n\nTo do so, you will need to click on Continue, find Build number in the list, and click on it 7 times. You may need to enter your PIN/password. After doing this, go back to Safer.</string>
    <string name="back">Back</string>
    <string name="enableAdbDebugging">Enable USB debugging</string>
    <string name="debugging_desc">"You will also need to enable the USB debugging feature of your device. It's very simple, and like the developer options, you can disable it after setup and it won't void your warranty.\n\nTo do so, you will need to click Continue, find \"USB debugging\" on the list, enable it, and accept the warning. After doing this, go back to Safer. "</string>
    <string name="pc_setup">PC setup</string>
    <string name="pc_setup_desc">On your computer, make sure that you use the Google Chrome or Opera browser. Open this website in one of these 2 browsers:</string>
    <string name="follow_instructions">After opening the website, follow the instructions on it..</string>
    <string name="devOptionsNotEnabled">Developer options not enabled</string>
    <string name="saferpin">Safer PIN</string>
    <string name="pin_desc">Set a 4 to 8 digit PIN code for Safer. It will be required to access your device remotely, lift restrictions, or to uninstall the app.</string>
    <string name="usbDebugOff">USB debugging not enabled</string>
    <string name="permsNotGranted">Permissions not granted, make sure that all steps are followed</string>
    <string name="too_short">Too short</string>
</resources>