<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            tools:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.appbar.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.appbar.MaterialToolbar
                        android:id="@+id/topAppBar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="?attr/colorSecondaryContainer"
                        app:liftOnScroll="true"
                        app:title="@string/setup" />

                </com.google.android.material.appbar.AppBarLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_gravity="bottom"
                            app:srcCompat="@drawable/ic_baseline_security_24"
                            app:tint="?attr/colorPrimary" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:foregroundTintMode="screen"
                            android:gravity="center"
                            android:text="@string/app_name"
                            android:textColor="?attr/colorPrimary"
                            android:textSize="40sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                        </LinearLayout>
                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>

            </LinearLayout>

            <!-- Note: A RecyclerView can also be used -->
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:elevation="3dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/bottom"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:gravity="bottom"
                        android:orientation="horizontal">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:gravity="end">

                            <Button
                                android:id="@+id/startButton"
                                style="@style/Widget.Material3.Button.Icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom|end"
                                android:layout_marginEnd="13dp"
                                android:layout_marginBottom="5dp"
                                android:text="@string/start_setup"
                                app:icon="@drawable/ic_baseline_arrow_forward_24" />

                        </TableRow>
                    </LinearLayout>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/accounts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible">

            <!-- Note: A RecyclerView can also be used -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_anchor="@+id/linearLayout"
                app:layout_anchorGravity="bottom|center">

                <com.google.android.material.appbar.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.appbar.MaterialToolbar
                        android:id="@+id/topAppBar2"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="?attr/colorSecondaryContainer"
                        app:liftOnScroll="true"
                        app:title="@string/accounts_users" />

                </com.google.android.material.appbar.AppBarLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="vertical">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="20dp"
                            android:text="@string/accounts_desc"
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/accountSettingsButton"
                            style="@style/Widget.Material3.Button.TonalButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="20dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/acc_settings"
                            app:icon="@drawable/ic_baseline_settings_24" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="20dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/need_a_pc"
                            android:textSize="16sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginHorizontal="20dp"
                            android:orientation="vertical">

                        </LinearLayout>
                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>

            </LinearLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:elevation="3dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/bottom2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:gravity="bottom"
                        android:orientation="horizontal">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:gravity="end">

                            <Button
                                android:id="@+id/nextButton"
                                style="@style/Widget.Material3.Button.Icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom|end"
                                android:layout_marginEnd="13dp"
                                android:layout_marginBottom="5dp"
                                android:enabled="false"
                                android:text="@string/continue_"
                                app:icon="@drawable/ic_baseline_arrow_forward_24" />

                        </TableRow>
                    </LinearLayout>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>